Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gst-plugins-bad gst-plugins-bad
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 989
    • Issues 989
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 132
    • Merge requests 132
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Monitor
    • Monitor
    • Incidents
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamer
  • gst-plugins-badgst-plugins-bad
  • Issues
  • #1138

Closed
Open
Created Dec 09, 2019 by Aaron Boxer@boxerabContributor

d3d11videosink: errors when reconfiguring caps

@seungha.yang : see this project, d3d11 branch, for a reproducer.

The errors are:

0:00:03.342104000  2412   03123780 ERROR            d3d11device gstd3d11device.c:717:gst_d3d11_device_create_swap_chain_internal:<d3d11device0> Cannot create SwapChain Object: 0x80070005
0:00:03.366167000  2412   03123848 ERROR            d3d11window gstd3d11window.c:994:gst_d3d11_window_prepare:<d3d11window0> Cannot create swapchain
0:00:03.376322000  2412   03123848 ERROR         d3d11videosink gstd3d11videosink.c:345:gst_d3d11_video_sink_set_caps:<d3d11videosink0> cannot create swapchain
Debug: Failed to prepare d3d11window
0:00:03.390473000  2412   03123780 ERROR            d3d11device gstd3d11device.c:717:gst_d3d11_device_create_swap_chain_internal:<d3d11device0> Cannot create SwapChain Object: 0x80070005
0:00:03.398254000  2412   03123848 ERROR            d3d11window gstd3d11window.c:994:gst_d3d11_window_prepare:<d3d11window0> Cannot create swapchain
0:00:03.405329000  2412   03123848 ERROR         d3d11videosink gstd3d11videosink.c:345:gst_d3d11_video_sink_set_caps:<d3d11videosink0> cannot create swapchain
Debug: Failed to prepare d3d11window
0:00:03.421279000  2412   03123780 ERROR            d3d11device gstd3d11device.c:717:gst_d3d11_device_create_swap_chain_internal:<d3d11device0> Cannot create SwapChain Object: 0x80070005
0:00:03.429357000  2412   03123848 ERROR            d3d11window gstd3d11window.c:994:gst_d3d11_window_prepare:<d3d11window0> Cannot create swapchain
0:00:03.436211000  2412   03123848 ERROR         d3d11videosink gstd3d11videosink.c:345:gst_d3d11_video_sink_set_caps:<d3d11videosink0> cannot create swapchain
Debug: Failed to prepare d3d11window
``
Edited Dec 09, 2019 by Aaron Boxer
Assignee
Assign to
Time tracking